# math

./: .gitmodules  CMakeLists.txt  conanfile.py  conanfile.txt  mathVersionString.cmake
cmake/: ISA.cmake  MakeTarget.cmake
modules/: CMakeLists.txt
modules/math/: CMakeLists.txt
modules/math/include/math/: compilation_info.h  constants.h  foldpoly.h  include_all.h  math_functions.h  math_type_traits.h  space_conversion.h
modules/math/include/math/aabb/: aabb.h  aabb2.h  aabb3.h
modules/math/include/math/matrix/: mat4x4.h  matrix.h
modules/math/include/math/matrix/simd/: mat4x4fa.h
modules/math/include/math/vector/: vec2.h  vec3.h  vec4.h  vec8.h  vector.h  vector_type_traits.h
modules/math/include/math/vector/simd/: vec3ba.h  vec3fa.h  vec3ia.h  vec4ba.h  vec4fa.h  vec4ia.h  vec8ba.h  vec8fa.h  vec8ia.h
tests/math_test/: CMakeLists.txt
tests/math_test/include/math_test/: vector_add.h  vector_div.h  vector_equals.h  vector_mul.h  vector_sub.h
tests/math_test/src/: main.cpp  vector_add.cpp  vector_div.cpp  vector_equals.cpp  vector_mul.cpp  vector_sub.cpp
